fix: Text plugin editor UI fix - Text Editor button alignment issue fix contributes:https://github.com/ekstep/Content-Plugins/issues/29

--- a/org.ekstep.config-1.0/editor/config.css
+++ b/org.ekstep.config-1.0/editor/config.css
@@ -27,7 +27,7 @@
 }
 
 .config-toolbar-content {
-    max-height: 300px;
+    max-height: 320px;
     overflow-y: auto;
     overflow-x: hidden;
 }
